src/test/ui/closure_context/issue-26046-fn-mut.stderr
error[E0525]: expected a closure that implements the `Fn` trait, but this closure only implements `FnMut`
  --> $DIR/issue-26046-fn-mut.rs:14:19
   |
14 |       let closure = || {
   |  ___________________^
15 | |         num += 1;
16 | |     };
   | |_____^
   |
note: closure is `FnMut` because it mutates the variable `num` here
  --> $DIR/issue-26046-fn-mut.rs:15:9
   |
15 |         num += 1;
   |         ^^^

error: aborting due to previous error(s)

